Implement partner authentication with accounts limited to one project Implement limiting accounts to input on only some entities, or read only (client side only). Add logout link Fix bugs when displaying logframes or forms in read only mode Change date form in form list to uniformize across project Remove useless dependency (ngHandsontable)

--- a/client/dev/partials/help/menu.html
+++ b/client/dev/partials/help/menu.html
@@ -44,7 +44,7 @@
 
 				<div class="panel-collapse">
 					<div class="list-group">
-						<a ui-sref="main.help.create" ui-sref-active="active" class="list-group-item">
+						<a ui-sref="main.help.create" ui-sref-active="active" class="list-group-item" ng-if="userCtx.type == 'user'">
 							<i class="fa fa-check pull-right" style="margin-top: 2px" ng-if="isDocRead('create')"></i>
 							<i class="fa fa-circle-o-notch fa-spin pull-right" style="margin-top: 2px" ng-if="!isDocRead('create') && $state.is('main.help.create')"></i>
 							<i class="fa fa-plus fa-fw"></i>
@@ -97,7 +97,7 @@
 			</div>
 	
 
-			<div class="panel panel-default">
+			<div class="panel panel-default" ng-if="userCtx.type == 'user'">
 				<div class="panel-heading">
 					<h4 class="panel-title" translate="help.block.indicators"></h4>
 				</div>
