--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -9,6 +9,13 @@ body {
   padding: 3px 6px;
   height: 24px;
 }
+.input-lg {
+    height: 46px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
 
 .form-group {
   margin-bottom: 8px;
@@ -43,6 +50,11 @@ p {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
+}
+
+.btn-lg {
+    padding: 10px 16px;
+    font-size: 18px;
 }
 
 legend {
@@ -383,3 +395,42 @@ ul:hover>.onrollover {
     line-height: 1.3;
     border-radius: 3px;
 }
+
+
+
+      body {
+        background-color: #EEE;
+      }   
+  
+      #load-container{
+        position: absolute;
+        top: 50%;
+        margin-top: -200px;/* half of #content height*/
+        left: 0;
+        width: 100%;
+      }
+
+      #load-content {
+        width: 624px;
+        margin-left: auto;
+        margin-right: auto;
+        height: 395px;
+        text-align: center;
+        background-color: #FFF;
+        border: 1px solid #CCC;
+        border-radius: 5px;
+        padding: 20px;
+      }
+
+      #load-content h3 {
+        margin-top: 10px;
+      }
+      
+      #load-content img {
+        width: 250px;
+      }
+
+      #load-content .progress {
+        width: 80%;
+        margin: auto;
+      }
