--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li class="active" translate="project.collection_input_list"></li>
 </ol>
@@ -25,35 +25,35 @@
 
 <div style="overflow: auto">
 
-<table class="table table-bordered table-stripped table-condensed">
-	<thead>
-		<tr>
-			<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" translate="project.date_due"></th>
-			<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showProject[selectedForm.id]" translate="shared.project"></th>
-			<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">{{entity.name}}</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
-			<th>{{date}}</th>
-			<td ng-if="showProject[selectedForm.id]">
-				<a class="btn btn-xs"
-				   ng-class="{'btn-default': status.none === 'done', 'btn-primary': status.none === 'expected', 'btn-danger': status.none === 'outofschedule'}"
-				   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
-				   ng-if="status.none">
-					{{('project.input_status.' + status.none + (canEdit ? '-edit' : '-read')) | translate}}
-				</a>
-			</td>
-			<td ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">
-				<a class="btn btn-xs"
-				   ng-class="{'btn-default': status[entity.id] === 'done', 'btn-primary': status[entity.id] === 'expected', 'btn-danger': status[entity.id] === 'outofschedule'}"
-				   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: entity.id})"
-				   ng-if="status[entity.id]">
-					{{('project.input_status.' + status[entity.id] + (canEdit ? '-edit' : '-read')) | translate}}
-				</a>
- 			</td>
-		</tr>
-	</tbody>
-</table>
+	<table class="table table-bordered table-stripped table-condensed">
+		<thead>
+			<tr>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" translate="project.date_due"></th>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showProject[selectedForm.id]" translate="shared.project"></th>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">{{entity.name}}</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
+				<th>{{date}}</th>
+				<td ng-if="showProject[selectedForm.id]">
+					<a class="btn btn-xs"
+					   ng-class="{'btn-default': status.none === 'done', 'btn-primary': status.none === 'expected', 'btn-danger': status.none === 'outofschedule'}"
+					   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
+					   ng-if="status.none">
+						{{('project.input_status.' + status.none + (canEdit.none ? '-edit' : '-read')) | translate}}
+					</a>
+				</td>
+				<td ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">
+					<a class="btn btn-xs"
+					   ng-class="{'btn-default': status[entity.id] === 'done', 'btn-primary': status[entity.id] === 'expected', 'btn-danger': status[entity.id] === 'outofschedule'}"
+					   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: entity.id})"
+					   ng-if="status[entity.id]">
+						{{('project.input_status.' + status[entity.id] + (canEdit[entity.id] ? '-edit' : '-read')) | translate}}
+					</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
 </div>
