--- a/client/dev/partials/projects/indicators/analysis.html
+++ b/client/dev/partials/projects/indicators/analysis.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li><a ui-sref="main.project.reporting_analysis_list" translate="shared.reporting_analysis"></a></li>
 	<li class="active" ng-bind="report.date|amDateFormat:'YYYY-MM-DD'"></li>
