--- a/client/dev/partials/projects/indicators/logframe-edit.html
+++ b/client/dev/partials/projects/indicators/logframe-edit.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb noprint">
-	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li class="active" translate="shared.logical_frames"></li>
 </ol>
@@ -11,7 +11,7 @@
 		<a ng-click="setLogicalFrame(index)">{{logframe.name||('project.unnamed_logframe'|translate)}}</a>
 	</li>
 
-	<li class="">
+	<li acl-has-project-role="owner">
 		<a ng-click="createLogicalFrame()" class="btn-primary">
 			<i class="fa fa-plus"></i>
 			{{'project.create_logframe'|translate}}
@@ -24,7 +24,10 @@
 <form class="form-horizontal noprint" role="form" name="projectForm" novalidate ng-if="logicalFrameIndex !== null">
 	<fieldset>
 		<legend>
-			<a class="btn btn-danger btn-xs pull-right noprint" ng-click="deleteLogicalFrame()" style="margin-bottom: 10px">
+			<a class="btn btn-danger btn-xs pull-right noprint"
+			   ng-click="deleteLogicalFrame()"
+			   style="margin-bottom: 10px"
+			   acl-has-project-role="owner">
 				<i class="fa fa-times"></i>
 				<span translate="shared.delete"></span>
 			</a>
@@ -67,18 +70,20 @@
 					<ul>
 						<li ng-repeat="indicator in project.logicalFrames[logicalFrameIndex].indicators">
 							{{indicator.display}}
+							
+							<span acl-has-project-role="owner">
+								<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, project.logicalFrames[logicalFrameIndex].indicators)" tooltip="{{'shared.edit'|translate}}">
+									<i class="fa fa-pencil"></i>
+								</a>
 
-							<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, project.logicalFrames[logicalFrameIndex].indicators)" tooltip="{{'shared.edit'|translate}}">
-								<i class="fa fa-pencil"></i>
-							</a>
+								<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
+									<i class="fa fa-link"></i>
+								</a>
 
-							<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
-								<i class="fa fa-link"></i>
-							</a>
-
-							<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
-								<i class="fa fa-unlink"></i>
-							</a>
+								<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
+									<i class="fa fa-unlink"></i>
+								</a>
+							</span>
 						</li>
 					</ul>
 
@@ -143,17 +148,19 @@
 									<li ng-repeat="indicator in purpose.indicators">
 										{{indicator.display}}
 
-										<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, purpose.indicators)" tooltip="{{'shared.edit'|translate}}">
-											<i class="fa fa-pencil"></i>
-										</a>
+										<span acl-has-project-role="owner">
+											<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, purpose.indicators)" tooltip="{{'shared.edit'|translate}}">
+												<i class="fa fa-pencil"></i>
+											</a>
 
-										<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
-											<i class="fa fa-link"></i>
-										</a>
+											<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
+												<i class="fa fa-link"></i>
+											</a>
 
-										<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
-											<i class="fa fa-unlink"></i>
-										</a>
+											<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
+												<i class="fa fa-unlink"></i>
+											</a>
+										</span>
 									</li>
 								</ul>
 
@@ -213,17 +220,19 @@
 												<li ng-repeat="indicator in output.indicators">
 													{{indicator.display}}
 
-													<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, output.indicators)" tooltip="{{'shared.edit'|translate}}">
-														<i class="fa fa-pencil"></i>
-													</a>
+													<span acl-has-project-role="owner">
+														<a class="btn btn-xxs btn-default" ng-click="editIndicator(indicator, output.indicators)" tooltip="{{'shared.edit'|translate}}">
+															<i class="fa fa-pencil"></i>
+														</a>
 
-													<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
-														<i class="fa fa-link"></i>
-													</a>
+														<a class="btn btn-xxs btn-default" ng-click="link(indicator)" ng-if="!indicator.indicatorId" tooltip="{{'project.link_indicator'|translate}}">
+															<i class="fa fa-link"></i>
+														</a>
 
-													<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
-														<i class="fa fa-unlink"></i>
-													</a>
+														<a class="btn btn-xxs btn-default" ng-click="unlink(indicator)" ng-if="indicator.indicatorId" tooltip="{{'project.unlink_indicator'|translate}}">
+															<i class="fa fa-unlink"></i>
+														</a>
+													</span>
 												</li>
 											</ul>
 
@@ -295,3 +304,4 @@
 		</a>
 	</div>
 </form>
+
