--- a/client/dev/partials/projects/specification/basics.html
+++ b/client/dev/partials/projects/specification/basics.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb noprint">
-	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li class="active">{{project.name}}</li>
 	<li class="active" translate="project.basics"></li>
 </ol>
