--- a/client/dev/partials/projects/specification/collection-site-list.html
+++ b/client/dev/partials/projects/specification/collection-site-list.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
 	<li class="active" translate="project.collection_site_list"></li>
 </ol>
