--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -34,11 +34,24 @@
 		<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
 		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.collects.'+form.collect)|translate">
 			<select class="form-control" name="collect" id="collect-input" ng-model="form.collect">
+				<option value="some_entity" translate="project.collects.some_entity"></option>
 				<option value="entity" translate="project.collects.entity"></option>
 				<option value="project" translate="project.collects.project"></option>
 			</select>
 		</div>
-	</div>		
+	</div>
+
+	<div class="form-group" ng-if="form.collect == 'some_entity'">
+		<label for="entities-input" class="col-sm-2 control-label" translate="project.collection_site_list"></label>
+		<div class="col-sm-10">
+			<ui-select multiple ng-model="form.entities" theme="bootstrap">
+				<ui-select-match placeholder="">{{$item.name|translate}}</ui-select-match>
+				<ui-select-choices repeat="entity.id as entity in project.entities">
+					{{entity.name|translate}}
+				</ui-select-choices>
+			</ui-select>
+		</div>
+	</div>
 
 	<div class="form-group">
 		<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
