--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -43,7 +43,7 @@
 
 	<div class="form-group" ng-if="form.collect == 'some_entity'">
 		<label for="entities-input" class="col-sm-2 control-label" translate="project.collection_site_list"></label>
-		<div class="col-sm-10">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="form.entities | getObjects:project.entities | pluck:'name' | join:', '">
 			<ui-select multiple ng-model="form.entities" theme="bootstrap">
 				<ui-select-match placeholder="">{{$item.name|translate}}</ui-select-match>
 				<ui-select-choices repeat="entity.id as entity in project.entities">
