- Change how inputs store there data. We now use a flat array for faster performance. - Fix small bugs in reporting tables. - Rewrite Olap cube completely for more features, better performance, and easier to read code. - Remove group related code in reporting.js, now that the olap cube natively support nested dimensions.

--- a/client/dev/partials/projects/activity/collection-input-edition.html
+++ b/client/dev/partials/projects/activity/collection-input-edition.html
@@ -44,7 +44,12 @@
 		</label>
 
 		<div class="col-sm-10">
-			<input-grid partitions="partitions[element.id]" ng-model="currentInput.values[element.id]" offset="positions[element.id]"></input-grid>
+			{{partitions[element.id]}}
+
+			<input-grid ng-model="currentInput.values[element.id]"
+						partitions="element.partitions"
+						offset="positions[element.id]"
+						rotation="rotations[element.id]"></input-grid>
 		</div>
 	</div>
 </form>
