--- a/client/dev/partials/projects/activity/_olap_grid.html
+++ b/client/dev/partials/projects/activity/_olap_grid.html
@@ -12,7 +12,7 @@
 			<th colspan="{{grid.body[0].headerCols.length}}"
 				rowspan="{{grid.header.length}}"
 				ng-if="$first"></th>
-			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}">{{col}}</th>
+			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}">{{col.name}}</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -20,7 +20,7 @@
 			<th ng-repeat="headerCol in row.headerCols"
 				ng-if="$parent.$index % rowspans[$index] == 0"
 				rowspan="{{rowspans[$index]}}">
-				{{headerCol}}
+				{{headerCol.name}}
 			</th>
 			
 			<td ng-repeat="col in row.dataCols track by $index" activity-reporting-field></td>
