--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -33,7 +33,7 @@
 						<span class="input-group-addon"><i class="fa fa-table fa-fw"></i></span>
 						<ui-select id="rows-input" multiple ng-model="planning.rows" name="rows" theme="bootstrap">
 							<ui-select-match placeholder="{{'project.select_rows'|translate}}">{{('project.dimensions.' + $item.id)|translate}}</ui-select-match>
-							<ui-select-choices repeat="row.id as row in availableRows">{{('project.dimensions.' + row.id)|translate}}</ui-select-choices>
+							<ui-select-choices group-by="'group'" repeat="row.id as row in availableRows">{{('project.dimensions.' + row.id)|translate}}</ui-select-choices>
 						</ui-select>
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 						<span class="input-group-addon"><i class="fa fa-columns fa-fw"></i></span>
 						<ui-select id="cols-input" multiple ng-model="planning.cols" name="cols" theme="bootstrap">
 							<ui-select-match placeholder="{{'project.select_cols'|translate}}">{{('project.dimensions.' + $item.id)|translate}}</ui-select-match>
-							<ui-select-choices repeat="col.id as col in availableCols">{{('project.dimensions.' + col.id)|translate}}</ui-select-choices>
+							<ui-select-choices group-by="'group'" repeat="col.id as col in availableCols">{{('project.dimensions.' + col.id)|translate}}</ui-select-choices>
 						</ui-select>
 					</div>
 				</div>
@@ -106,13 +106,13 @@
 			</div>
 
 			<div class="form-group" ng-repeat="dimension in dimensions" ng-if="dimension.id != 'day' && dimension.id != 'week' && dimension.id != 'month' && dimension.id != 'quarter' && dimension.id != 'year'">
-				<label for="{{dimension.id}}-input" class="col-sm-1 control-label">{{('project.' + dimension.id)|translate}}</label>
+				<label for="{{dimension.id}}-input" class="col-sm-1 control-label">{{('project.dimensions.' + dimension.id)|translate}}</label>
 				<div class="col-sm-11">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
 						<ui-select id="{{dimension.id}}-input" multiple ng-model="planning.filters[dimension.id]" name="{{dimension}}" theme="bootstrap">
-							<ui-select-match placeholder="{{'project.select_filters'|translate}}">{{$item}}</ui-select-match>
-							<ui-select-choices repeat="filter in dimension.items">{{filter}}</ui-select-choices>
+							<ui-select-match placeholder="{{'project.select_filters'|translate}}">{{$item.name}}</ui-select-match>
+							<ui-select-choices repeat="filter.id as filter in dimension.items">{{filter.name}}</ui-select-choices>
 						</ui-select>
 					</div>
 				</div>
