- improve acls and server side validation. - Partner password only required for new accounts.

--- a/client/dev/partials/projects/specification/user-modal.html
+++ b/client/dev/partials/projects/specification/user-modal.html
@@ -39,7 +39,7 @@
 					   class="form-control"
 					   ng-minlength="4"
 					   ng-pattern="/^[a-z\.\-]+$/"
-   					   required>
+					   required>
 			</div>
 		</div>
 
@@ -51,7 +51,7 @@
 					   ng-model="user.password"
 					   class="form-control"
 					   ng-minlength="6"
-					   required>
+					   ng-required="isNew">
 			</div>
 		</div>
 
